@@ -75,7 +75,7 @@ XDT_I18N([@LINGUAS@])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.8])
+XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.1.9])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.6.0])
 XDT_CHECK_PACKAGE([VTE], [vte], [0.11.11])
 
